syntax = "proto3";

package aws_message;

message stdev_block {
    optional float average = 1;  // average over the measurement period
    optional float minus_std_dev = 2;  // average value minus standard deviation of observations over measurement period
    optional float plus_std_dev = 3;  // average value plus standard deviation of observations over measurement period
}

message min_max_block {
    optional float average = 1;  // average over the measurement period
    optional float max = 2;  // maximum value in the measurement period
    optional float min = 3;  // minimum value in the measurement period
}
message aws_record {
    optional string station_wsi = 1; //WIGOS Station Identifier
    optional int64 obs_dt_utc = 2; // date and time of observation in UTC units: milliseconds since Epoch
    optional min_max_block wind_speed = 4; // Wind Speed at 10m, Units=knots
    optional stdev_block wind_direction = 5; // Wind Direction at 10m, Units = degrees from magnetic north.
}

message aws_message_new{
    repeated aws_record records = 1;
}
